@@ -11,12 +11,14 @@ import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.ItemUsage;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.text.Text;
 import net.minecraft.util.Hand;
 import net.minecraft.util.TypedActionResult;
 import net.minecraft.world.World;
 
+import net.minecraft.world.explosion.ExplosionBehavior;
 import org.jetbrains.annotations.Nullable;
 import java.util.List;
 
@@ -76,4 +78,6 @@ public class LuxintusBerryItem extends Item {
             tooltip.add(Text.translatable("item.lightwithin.luxintus_berry.tooltip1"));
         }
     }
+
+
 }
