@@ -10,25 +10,22 @@ import net.minecraft.client.world.ClientWorld;
 import net.minecraft.particle.DefaultParticleType;
 
 @Environment(EnvType.CLIENT)
-public class LightParticleV3 extends AnimatedParticle {
-    LightParticleV3(ClientWorld world, double x, double y, double z, double velocityX, double velocityY, double velocityZ, SpriteProvider spriteProvider) {
-        super(world, x, y, z, spriteProvider, -1.75F);
-        this.velocityMultiplier = 0.6F;
-        this.velocityX = velocityX*0.1;
+public class LightParticle extends AnimatedParticle {
+    LightParticle(ClientWorld world, double x, double y, double z, double velocityX, double velocityY, double velocityZ, SpriteProvider spriteProvider) {
+        super(world, x, y, z, spriteProvider, 0.0145F);
+        this.velocityX = velocityX;
         this.velocityY = velocityY;
-        this.velocityZ = velocityZ*0.1;
+        this.velocityZ = velocityZ;
         this.scale *= 0.75F;
         this.maxAge = 60 + this.random.nextInt(12);
+        this.setTargetColor(15916745);
         this.setSpriteForAge(spriteProvider);
-        int val = this.random.nextInt(12);
-        if (val == 0) {
-            this.setColor(0.5F + this.random.nextFloat() * 0.2F, 1F, 1F);
-        }else if(val == 1){
-            this.setColor(1F, 0.5F + this.random.nextFloat() * 0.2F, 1F);
-        }else if(val == 2){
-            this.setColor(1F, 1f, 0.5F + this.random.nextFloat() * 0.2F);
-        }
+    }
 
+    @Override
+    public void move(double dx, double dy, double dz) {
+        this.setBoundingBox(this.getBoundingBox().offset(dx, dy, dz));
+        this.repositionFromBoundingBox();
     }
 
     @Environment(EnvType.CLIENT)
@@ -40,7 +37,7 @@ public class LightParticleV3 extends AnimatedParticle {
         }
 
         public Particle createParticle(DefaultParticleType defaultParticleType, ClientWorld clientWorld, double d, double e, double f, double g, double h, double i) {
-            return new LightParticleV3(clientWorld, d, e, f, g, h, i, this.spriteProvider);
+            return new LightParticle(clientWorld, d, e, f, g, h, i, this.spriteProvider);
         }
     }
 }
