@@ -11,6 +11,7 @@
   "item.lightwithin.luxmutua_berry": "Luxmutua Berry",
   "item.lightwithin.luxcognita_berry": "Luxcognita Berry",
   "item.lightwithin.bottled_light": "Bottled Light",
+  "item.lightwithin.luxintus_berry_powder": "Luxintus Berry Powder",
 
   "item.lightwithin.berry.tooltip": "Press §dSHIFT§r to know what this berry does!",
   "item.lightwithin.luxintus_berry.tooltip": "§eThis light-dense berry will §aunleash§e your",
