@@ -1,0 +1,10 @@
+{
+  "textures": [
+    "lightwithin:light_5",
+    "lightwithin:light_4",
+    "lightwithin:light_3",
+    "lightwithin:light_2",
+    "lightwithin:light_1",
+    "lightwithin:light_0"
+  ]
+}
