@@ -1,0 +1,14 @@
+{
+  "animation": {
+    "frametime": 10,
+    "interpolate": true,
+    "frames": [
+        0,
+        1,
+        2,
+        2,
+        1,
+        0
+    ]
+  }
+}
