@@ -4,6 +4,7 @@
   "package": "me.emafire003.dev.lightwithin.mixin",
   "compatibilityLevel": "JAVA_16",
   "mixins": [
+    "AnvilItemCrushMixin",
     "BottleLightMixin",
     "DrownedEntityMixin",
     "EntityAttackEntityMixin",
